--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,8 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
 }
+
+#toast-container {
+    margin-top: 4.5rem;
+    margin-right: 2rem;
+}
